force-app/main/default/objects/b3o__Question__c/b3o__Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <label>Question Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>