force-app/main/default/objects/b3o__Question__c/fields/b3o__Details__c.field-meta.xml
<CustomField>
    <fullName>b3o__Details__c</fullName>
    <label>Question Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>