force-app/main/default/objects/b3o__Question__c/fields/b3o__Maximum_Score__c.field-meta.xml
<CustomField>
    <fullName>b3o__Maximum_Score__c</fullName>
    <label>Maximum Score</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>