force-app/main/default/objects/b3o__Question__c/fields/b3o__Minimum_Selections__c.field-meta.xml
<CustomField>
    <fullName>b3o__Minimum_Selections__c</fullName>
    <label>Minimum Selections</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>