force-app/main/default/objects/b3o__Question__c/fields/b3o__Question_Set__c.field-meta.xml
<CustomField>
    <fullName>b3o__Question_Set__c</fullName>
    <label>Question Set</label>
    <referenceTo>b3o__Question_Set__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>