force-app/main/default/objects/b3o__Question__c/fields/b3o__Required__c.field-meta.xml
<CustomField>
    <fullName>b3o__Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>