force-app/main/default/objects/b3o__Question__c/fields/b3o__Response_Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Multi Checkbox</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Multiple Files Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>