force-app/main/default/objects/b3o__Question__c/validationRules/b3o__Maximum_must_be_greater_than_minumum.validationRule-meta.xml
<ValidationRule>
    <fullName>b3o__Maximum_must_be_greater_than_minumum</fullName>
    <active>true</active>
    <errorConditionFormula>b3o__Maximum_Selections__c &lt;  b3o__Minimum_Selections__c</errorConditionFormula>
    <errorMessage>Maximum Selections cannot be less than Minimum Selections</errorMessage>
</ValidationRule>